kubernetes/echo.programme.lv/echo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: proglv
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: echo
