kubernetes/echo.programme.lv/echo.programme.lv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: proglv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: jmalloc/echo-server
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: proglv
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - echo.programme.lv
      secretName: letsencrypt-nginx-echo
  rules:
    - host: echo.programme.lv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: proglv
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: echo
